'fixed issue with pre content not wrapping'

--- a/less/moodle/bootstrapoverride.less
+++ b/less/moodle/bootstrapoverride.less
@@ -68,3 +68,6 @@ div[role="main"] {
         padding: 0 20px;
     }
 }
+pre {
+    white-space: pre-wrap;
+}
