--- a/style/moodle-rtl.css
+++ b/style/moodle-rtl.css
@@ -7971,6 +7971,10 @@ div[role="main"] ol {
   padding: 0 20px;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 /* some very targetted corrections to roll back nameclashes between
  * Moodle and Bootstrap like .row, .label, .content, .controls
  *
